--- a/css/styles.css
+++ b/css/styles.css
@@ -17,14 +17,53 @@ body {
 }
 .list {
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 .logo {
   color: var(--accent-color);
 }
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
 
 /* Site nav */
+.container .all-nav {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-right: auto;
+  margin-left: auto;
+}
+.all-nav {
+  display: flex;
+  align-items: center;
+  margin-bottom: 94px;
+  border-bottom: 10px red;
+}
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+.site-nav .item {
+  margin-right: 50px;
+}
+.site-nav .item:last-child {
+  margin-right: 0;
+}
 
 .site-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
   color: var(--primary-text-color);
 }
 .site-nav .link:hover,
@@ -35,7 +74,7 @@ body {
   color: var(--accent-color);
 }
 .site-nav {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 500;
   font-size: 14px;
   line-height: 1.2;
@@ -55,31 +94,48 @@ body {
   color: var(--accent-color);
 }
 .header-contacts {
-  font-family: 'Roboto';
+  display: flex;
+  font-family: "Roboto";
   font-weight: 500;
   font-size: 14px;
+  margin-left: auto;
   line-height: 1.2;
   letter-spacing: 0.02em;
 }
 
+.header-contacts .item + .item {
+  margin-left: 50px;
+}
+
 /* Button */
+.container .buttons {
+  width: 1200px;
+  margin-right: auto;
+  margin-left: auto;
+}
 .button.main {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 16px;
   line-height: 1.2;
   cursor: pointer;
   color: var(--background-color-white);
   background-color: var(--accent-color);
+  padding: 10px 32px;
+  min-width: 136px;
+  text-align: center;
 }
 .button.portfolio {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   cursor: pointer;
+  margin-bottom: 56px;
   color: var(--primary-text-color);
   background-color: var(--botton-background-color);
+  padding: 6px 22px;
+  text-align: center;
 }
 .button.portfolio:hover,
 .button.portfolio:focus {
@@ -89,14 +145,20 @@ body {
 .button.:focus {
   background-color: var(--botton-hover-blue);
 }
+.buttons {
+  display: flex;
+  justify-content: center;
+}
 
 /* Hero */
 
 .hero {
   background-color: var(--hero-background-grey);
+  text-align: center;
+  margin-bottom: 94px;
 }
 .hero-title {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: 900;
   font-size: 44px;
   line-height: 1.2;
@@ -104,9 +166,14 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--background-color-white);
+  margin-top: 0;
+  margin-bottom: 40px;
 }
 
 /* Section first */
+.section-list {
+  display: flex;
+}
 .section-list .title {
   color: var(--primary-text-color);
 }
@@ -114,30 +181,53 @@ body {
   color: var(--secondary-text-color);
 }
 .title {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 14px;
   line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 10px;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--primary-text-color);
 }
 .info-title {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: normal;
   font-size: 14px;
   line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 94px;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 
 /* Activity*/
+
+.container-activity {
+  display: block;
+}
+.photos {
+  display: flex;
+}
+.photo-section {
+  margin-right: 30px;
+}
+
+.photo-section:nth-child(3n) {
+  margin-right: 0;
+}
+.img {
+  display: block;
+}
 .activity {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 36px;
   line-height: 1.2;
   text-align: center;
+  margin-top: 0;
+  margin-bottom: 50px;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
@@ -147,6 +237,8 @@ body {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.2;
+  margin-top: 94px;
+  margin-bottom: 50px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
@@ -156,6 +248,8 @@ body {
   font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 10px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
@@ -165,9 +259,14 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 30px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
+}
+.team-info {
+  display: flex;
 }
 
 .team-info .worker {
@@ -181,19 +280,47 @@ body {
 }
 .team-worker {
   background-color: var(--background-color-white);
+  margin-right: 30px;
+}
+.team-worker:nth-child(4) {
+  margin-right: 0;
+}
+/* Портфолио */
+.container {
+  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 0;
+  padding-left: 0;
+}
+.flex-element {
+  width: 370px;
+
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+.flex-element:nth-child(3n) {
+  margin-right: 0;
+}
+.flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
-/* Портфолио */
-
 .title-card {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: bold;
   font-size: 18px;
   line-height: 1.2;
   color: var(--primary-text-color);
 }
 .text-card {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-weight: normal;
   font-size: 16px;
   line-height: 1.2;
@@ -201,9 +328,12 @@ body {
 }
 
 /* footer*/
+.logo-footer {
+  margin-top: 60px;
+}
 
 .info {
-  font-family: 'Roboto';
+  font-family: "Roboto";
   font-style: normal;
   font-weight: normal;
   font-size: 14px;
@@ -226,4 +356,5 @@ body {
 }
 .contact-info a {
   text-decoration: none;
+  margin-bottom: 9px;
 }
