--- a/css/styles.css
+++ b/css/styles.css
@@ -42,8 +42,8 @@ body {
 .all-nav {
   display: flex;
   align-items: center;
-  margin-bottom: 94px;
-  border-bottom: 10px red;
+  border: 1px solid #eeeeee;
+  border-top: none;
 }
 .main-nav {
   display: flex;
@@ -124,6 +124,7 @@ body {
   padding: 10px 32px;
   min-width: 136px;
   text-align: center;
+  margin-bottom: 210px;
 }
 .button.portfolio {
   font-family: "Roboto";
@@ -148,6 +149,7 @@ body {
 .buttons {
   display: flex;
   justify-content: center;
+  padding-top: 100px;
 }
 
 /* Hero */
@@ -156,6 +158,7 @@ body {
   background-color: var(--hero-background-grey);
   text-align: center;
   margin-bottom: 94px;
+  padding-top: 200px;
 }
 .hero-title {
   font-family: "Roboto";
@@ -281,9 +284,15 @@ body {
 .team-worker {
   background-color: var(--background-color-white);
   margin-right: 30px;
+  margin-bottom: 94px;
 }
+
 .team-worker:nth-child(4) {
   margin-right: 0;
+}
+.team {
+  border: 1px solid #eeeeee;
+  border-top: none;
 }
 /* Портфолио */
 .container {
@@ -299,17 +308,23 @@ body {
   margin-top: 0;
   padding-left: 0;
 }
-.flex-element {
+.flex-elements {
   width: 370px;
 
   margin-right: 30px;
   margin-bottom: 30px;
 }
-.flex-element:nth-child(3n) {
+.flex-elements:nth-child(3n) {
   margin-right: 0;
 }
-.flex-element:nth-last-child(-n + 3) {
+.flex-elements:nth-last-child(-n + 3) {
   margin-bottom: 0;
+}
+.flex {
+  border: 1px solid #eeeeee;
+}
+.card {
+  display: block;
 }
 
 .title-card {
@@ -326,10 +341,21 @@ body {
   line-height: 1.2;
   color: var(--secondary-text-color);
 }
+.flex-elements {
+  box-sizing: border-box;
+}
+.flex-container {
+  margin-bottom: 94px;
+}
 
 /* footer*/
-.logo-footer {
-  margin-top: 60px;
+.logo-footer a {
+  display: block;
+}
+.logo-first {
+  display: block;
+  margin-bottom: 20px;
+  padding-top: 60px;
 }
 
 .info {
@@ -357,4 +383,7 @@ body {
 .contact-info a {
   text-decoration: none;
   margin-bottom: 9px;
+}
+.last {
+  padding-bottom: 60px;
 }
