--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,9 @@ body {
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
 }
+header {
+  border-bottom: 1px solid #eeeeee;
+}
 .list {
   list-style: none;
   padding: 0;
@@ -30,7 +33,15 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
-
+.section {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.img {
+  display: block;
+  width: 100%;
+  height: auto;
+}
 /* Site nav */
 .container .all-nav {
   width: 1200px;
@@ -42,8 +53,6 @@ body {
 .all-nav {
   display: flex;
   align-items: center;
-  border: 1px solid #eeeeee;
-  border-top: none;
 }
 .main-nav {
   display: flex;
@@ -124,7 +133,6 @@ body {
   padding: 10px 32px;
   min-width: 136px;
   text-align: center;
-  margin-bottom: 210px;
 }
 .button.portfolio {
   font-family: "Roboto";
@@ -132,12 +140,13 @@ body {
   font-size: 16px;
   line-height: 1.2;
   cursor: pointer;
-  margin-bottom: 56px;
   color: var(--primary-text-color);
   background-color: var(--botton-background-color);
   padding: 6px 22px;
   text-align: center;
+  margin-right: 8px;
 }
+
 .button.portfolio:hover,
 .button.portfolio:focus {
   background-color: var(--accent-color);
@@ -149,7 +158,7 @@ body {
 .buttons {
   display: flex;
   justify-content: center;
-  padding-top: 100px;
+  margin-bottom: 56px;
 }
 
 /* Hero */
@@ -157,9 +166,10 @@ body {
 .hero {
   background-color: var(--hero-background-grey);
   text-align: center;
-  margin-bottom: 94px;
   padding-top: 200px;
+  padding-bottom: 200px;
 }
+
 .hero-title {
   font-family: "Roboto";
   font-weight: 900;
@@ -183,6 +193,7 @@ body {
 .section-list .info-title {
   color: var(--secondary-text-color);
 }
+
 .title {
   font-family: "Roboto";
   font-weight: bold;
@@ -200,11 +211,15 @@ body {
   font-size: 14px;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 94px;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
-
+.section-info {
+  margin-right: 30px;
+}
+.section-info:nth-child(4) {
+  margin-right: 0;
+}
 /* Activity*/
 
 .container-activity {
@@ -220,9 +235,7 @@ body {
 .photo-section:nth-child(3n) {
   margin-right: 0;
 }
-.img {
-  display: block;
-}
+
 .activity {
   font-family: "Roboto";
   font-weight: bold;
@@ -240,7 +253,6 @@ body {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.2;
-  margin-top: 94px;
   margin-bottom: 50px;
   text-align: center;
   letter-spacing: 0.03em;
@@ -252,7 +264,9 @@ body {
   font-size: 16px;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 0;
+  padding-top: 30px;
+  padding-bottom: 10px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
@@ -263,7 +277,8 @@ body {
   font-size: 16px;
   line-height: 1.2;
   margin-top: 0;
-  margin-bottom: 30px;
+  margin-bottom: 0;
+  padding-bottom: 30px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
@@ -284,7 +299,6 @@ body {
 .team-worker {
   background-color: var(--background-color-white);
   margin-right: 30px;
-  margin-bottom: 94px;
 }
 
 .team-worker:nth-child(4) {
@@ -294,13 +308,13 @@ body {
   border: 1px solid #eeeeee;
   border-top: none;
 }
+.third-section {
+  padding-bottom: 94px;
+}
 /* Портфолио */
-.container {
-  width: 1200px;
-  padding-left: 15px;
-  padding-right: 15px;
-  margin-left: auto;
-  margin-right: auto;
+.list-section {
+  padding-top: 100px;
+  padding-bottom: 94px;
 }
 .flex-container {
   display: flex;
@@ -332,6 +346,12 @@ body {
   font-weight: bold;
   font-size: 18px;
   line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 4px;
+  padding-top: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
   color: var(--primary-text-color);
 }
 .text-card {
@@ -339,13 +359,15 @@ body {
   font-weight: normal;
   font-size: 16px;
   line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-bottom: 20px;
+  padding-right: 24px;
+  padding-left: 24px;
   color: var(--secondary-text-color);
 }
 .flex-elements {
   box-sizing: border-box;
-}
-.flex-container {
-  margin-bottom: 94px;
 }
 
 /* footer*/
@@ -355,7 +377,6 @@ body {
 .logo-first {
   display: block;
   margin-bottom: 20px;
-  padding-top: 60px;
 }
 
 .info {
@@ -368,6 +389,8 @@ body {
 }
 .site-footer {
   background-color: var(--hero-background-grey);
+  padding-bottom: 60px;
+  padding-top: 60px;
 }
 .info-map {
   color: var(--background-color-white);
@@ -383,7 +406,4 @@ body {
 .contact-info a {
   text-decoration: none;
   margin-bottom: 9px;
-}
-.last {
-  padding-bottom: 60px;
 }
