--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body {
   background-color: var(--background-color-white);
   color: var(--primary-text-color);
   font-family: Roboto, sans-serif;
+  margin: 0;
 }
 header {
   border-bottom: 1px solid #eeeeee;
@@ -144,12 +145,19 @@ header {
   background-color: var(--botton-background-color);
   padding: 6px 22px;
   text-align: center;
+  border-radius: 5px;
+}
+.btn-list {
   margin-right: 8px;
+}
+.btn-list:nth-child(5) {
+  margin-right: 0;
 }
 
 .button.portfolio:hover,
 .button.portfolio:focus {
   background-color: var(--accent-color);
+  color: var(--background-color-white);
 }
 .button.main:hover,
 .button.:focus {
@@ -253,6 +261,7 @@ header {
   font-weight: bold;
   font-size: 36px;
   line-height: 1.2;
+  margin-top: 0;
   margin-bottom: 50px;
   text-align: center;
   letter-spacing: 0.03em;
@@ -265,7 +274,6 @@ header {
   line-height: 1.2;
   margin-top: 0;
   margin-bottom: 0;
-  padding-top: 30px;
   padding-bottom: 10px;
   text-align: center;
   letter-spacing: 0.03em;
@@ -278,13 +286,16 @@ header {
   line-height: 1.2;
   margin-top: 0;
   margin-bottom: 0;
-  padding-bottom: 30px;
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
 }
 .team-info {
   display: flex;
+}
+.team {
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 .team-info .worker {
@@ -313,7 +324,7 @@ header {
 }
 /* Портфолио */
 .list-section {
-  padding-top: 100px;
+  padding-top: 94px;
   padding-bottom: 94px;
 }
 .flex-container {
@@ -324,9 +335,9 @@ header {
 }
 .flex-elements {
   width: 370px;
-
   margin-right: 30px;
   margin-bottom: 30px;
+  border-bottom: 1px solid #eeeeee;
 }
 .flex-elements:nth-child(3n) {
   margin-right: 0;
@@ -334,9 +345,7 @@ header {
 .flex-elements:nth-last-child(-n + 3) {
   margin-bottom: 0;
 }
-.flex {
-  border: 1px solid #eeeeee;
-}
+
 .card {
   display: block;
 }
@@ -371,8 +380,24 @@ header {
 }
 
 /* footer*/
-.logo-footer a {
-  display: block;
+.class {
+  font-family: Raleway;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 31px;
+  letter-spacing: 0.03em;
+  text-decoration: none;
+  color: #2196f3;
+}
+.another-class {
+  color: var(--background-color-white);
+  margin-left: -7px;
+}
+
+.second-class {
+  color: var(--primary-text-color);
+  margin-left: -7px;
 }
 .logo-first {
   display: block;
@@ -405,5 +430,10 @@ header {
 }
 .contact-info a {
   text-decoration: none;
+}
+.footer-class {
   margin-bottom: 9px;
+}
+.footer-class:nth-child(3) {
+  margin-bottom: 0;
 }
